[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/common.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ken_fonts/kenpixel_mini_square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game3/texture/pb_paperboy.png" type="Texture" id=3]
[ext_resource path="res://game3/scenes/hud.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=5]
action = "ui_accept"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Common" parent="." instance=ExtResource( 1 )]

[node name="LabelLifeCounter" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -38.0
margin_top = 18.0
margin_right = -27.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScoreClock" type="Label" parent="."]
margin_left = 120.0
margin_top = 18.0
margin_right = 137.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "2:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMessage" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -21.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 3 )
text = "Textillo"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 145.967, 23.4775 )
texture = ExtResource( 3 )
vframes = 10
hframes = 4

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -51.0
margin_top = -26.0
margin_right = 51.0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
text = "Culturizar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerText" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="TimerText" to="." method="_on_TimerText_timeout"]
